--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-01 04:50:13
+lastsearch = 2024-08-01 05:47:15
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/voi-mini
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVULnIYC&sig=ACfU3U1lE7P7-yEuiH28UVTmDqenS8kLUQ&hl=en&sa=X&ved=2ahUKEwjDy_qhodKHAxX-EVkFHU7OCK8Q6AF6BAgZEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVULrC_E&sig=ACfU3U1ReZn42GqdY4oISSQXY2XDYSwR5A&hl=en&sa=X&ved=2ahUKEwj8odyBrtKHAxWOHjQIHcfUDuUQ6AF6BAggEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&snr=1_1056_4_1056_curator-tabs&curator_clanid=42342144
+url = https://store.steampowered.com/app/368260/_/?l=vietnamese&utm_source=keylol&curator_clanid=9730205
 
 [vi.wikipedia.org]
 match = 3.8%%
@@ -162,9 +162,9 @@ title = Đại Lễ Phật Đản - Ý nghĩa của nghi lễ tắm Phật
 url = https://www.tanhkhong.org/p1185a1901/4/dd0210-nhu-chieu-
 
 [enews.agu.edu.vn]
-match = -3.8%%
-title = Xuân chiến khu – cố nhạc sĩ Xuân Hồng
-url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=18151&Itemid=126
+match = 16.0%%
+title = Còn mãi kỷ niệm ở nơi đây
+url = https://enews.agu.edu.vn/index.php?option=com_content&view=article&id=23439&Itemid=122
 
 [watv.org]
 match = -76.9%%
