--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-01 02:45:53
+lastsearch = 2024-08-01 05:49:24
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOorLyq52cMmq0w7aqP8To7aW7GxJAMlTi4fVgPi_S6WAYfvVXkx8
 
 [tiki.vn]
 match = -3.7%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chăn tuyết nhung
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOooPkn3JUch126GAlKd0RkZepZG07aR31HCDhCIsbAoLXqvIAZu9
 
 [ninhouse.vn]
 match = 32.0%%
