--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-01 03:47:02
+lastsearch = 2024-08-01 05:48:00
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmMLtk7&sig=ACfU3U1LK7B33Y5ERWEKZyVcBKlupR0YEw&hl=en&sa=X&ved=2ahUKEwjjr42Sk9KHAxWklYkEHZx0BrcQ6AF6BAgVEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsjN_gq17&sig=ACfU3U2a3RPiPzx91U0Y1UyXsm-vV4slZQ&hl=en&sa=X&ved=2ahUKEwiN6fuWrtKHAxW4MTQIHW80CBQQ6AF6BAgWEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOooNR-TuBvu6i4lJieXkm3ntMhJmoex9Xs2CMe3aDvzvTyAAPwvQ
 
 [hopkinssports.com]
 match = -100.0%%
