--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-01 00:31:20
+lastsearch = 2024-08-01 05:44:27
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -75.0%%
-title = Bộ giường ngủ nhập khẩu Đài Loan cao cấp ...
-url = https://noithattana.vn/giuong-ngu/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
@@ -74,12 +74,12 @@ url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 [noithatcaco.vn]
 match = -135.0%%
 title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em?srsltid=AfmBOorUZjnH6wJ395qMJjhNNYJgCvjAHX-1cVF_I42-HjUzywCEISVy
 
 [www.quiphuc.com]
-match = 0.0%%
-title = Giường - Sản phẩm mùa hè
-url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
+match = 25.0%%
+title = Giường - Ghế du lịch
+url = https://www.quiphuc.com/collections/giuong-ghe-du-lich
 
 [sumika.vn]
 match = -65.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOorWW0ZH_RH7UPevD1Kdqj5Uv7NWvXV8Ekx_WsER158V2MQ9U7So
 
 [noithatgiakhanh.net]
 match = -105.0%%
@@ -194,7 +194,7 @@ url = https://www.duyloi.com/vn/giuong-ghe.html
 [noithatviva.vn]
 match = -105.0%%
 title = Tham khảo bảng giá giường ngủ tân cổ điển chính xác và ...
-url = https://noithatviva.vn/tin-tuc/tham-khao-bang-gia-giuong-ngu-tan-co-dien-chinh-xac-va-moi-nhat.html
+url = https://noithatviva.vn/tin-tuc/tham-khao-bang-gia-giuong-ngu-tan-co-dien-chinh-xac-va-moi-nhat.html?srsltid=AfmBOoopURyYGZLex1bh56690ynjK2aRhOvHKJcLgkVfak-T8IeRMJD0
 
 [cafeland.vn]
 match = -120.0%%
@@ -209,7 +209,7 @@ url = https://www.facebook.com/ShopThamTraiGiuong/
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ bọc da mã AM3-01
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-boc-da-ma-am3-01.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-boc-da-ma-am3-01.html?srsltid=AfmBOoo3EHgm1-RsEsDVommaCgBlZXDyg2MabnXIROjHyXM2OlqIuMfX
 
 [www.diyaudio.com]
 match = -65.0%%
