--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-01 06:23:14
+lastsearch = 2024-08-01 12:28:27
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -19,12 +19,12 @@ url = https://everon.online/collections/chan-bon-mua-everon
 [www.diepxuan.com]
 match = 3.6%%
 title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html?srsltid=AfmBOooK7lO1REgRs0qGdlyydPqM_puqrnmn9LFY6xTw0Yr_htMyTH_4
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOopJ0LvP7a6cAoDKi5h5yUmjMB6pIk73KzE3P3qP_pby_0L_oIfP
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
 
 [everonminhkhai.com]
 match = -26.7%%
