--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-01 11:44:48
+lastsearch = 2024-08-01 12:22:57
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOorF004gUbxPhJ6Zrp2vatcLzsk6IKqreTXjZovgymp6y-eNDONN
 
 [everon.online]
 match = -44.4%%
@@ -23,13 +23,13 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-24061 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24061.html
+title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOooN14bK_CrbV684L0D2hnaPB2toO9RqLc3U3BF8nrxHO8cBPfgf
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -39,7 +39,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 [www.everonvni.vn]
 match = 16.7%%
 title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
-url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
+url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/?srsltid=AfmBOoqhVE0ODC8ALrL5N7LNLxhM4EO88nJsM-aIACilR4xIzPtr_TvU
 
 [everonhanquoc.vn]
 match = 19.4%%
