--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-01 08:04:28
+lastsearch = 2024-08-01 12:26:23
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -50.0%%
+title = Về Hoa18
+url = https://hoa18.com/thong-tin/ve-hoa-18
 
 [www.youtube.com]
-match = -89.5%%
-title = Hoa Mộc Hương ta có cần cắt tỉa tạo tán không?
-url = https://www.youtube.com/watch?v=rDqH9asT7yA
+match = -147.4%%
+title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
+url = https://www.youtube.com/watch?v=ASsdVo0WBew
 
 [kallos.co]
 match = -105.3%%
@@ -62,9 +62,9 @@ title = Olympic Paris 2024: Nguyễn Thùy Linh dừng bước đầy tiếc ...
 url = https://baomoi.com/olympic-paris-2024-nguyen-thuy-linh-dung-buoc-day-tiec-nuoi-c49778520.epi
 
 [www.tiktok.com]
-match = -73.7%%
-title = using water in the nether | Water Splash
-url = https://www.tiktok.com/@camman.18/video/7278968159229512990
+match = -168.4%%
+title = Người thật lòng thương Ngộ Không #tayhai #trendingvideo ...
+url = https://www.tiktok.com/@kenhtayhai/video/7394314360526556423
 
 [xlinhho.hagiang.gov.vn]
 match = -157.9%%
@@ -285,4 +285,19 @@ url = https://www.mof.gov.vn/webcenter/portal/btcvn/pages_r/l/tin-bo-tai-chinh?d
 match = -168.4%%
 title = Nguyễn Thùy Linh thua tiếc nuối ở trận đấu quyết định tại ...
 url = https://baoangiang.com.vn/nguyen-thuy-linh-thua-tiec-nuoi-o-tran-dau-quyet-dinh-tai-olympic-paris-2024-a401570.html
+
+[www.qdnd.vn]
+match = -163.2%%
+title = Olympic Paris 2024: Nguyễn Thùy Linh dừng bước đầy tiếc ...
+url = https://www.qdnd.vn/the-thao/quoc-te/olympic-paris-2024-nguyen-thuy-linh-dung-buoc-day-tiec-nuoi-787609
+
+[nbtv.vn]
+match = -163.2%%
+title = Olympic Paris 2024: Nguyễn Thùy Linh dừng bước đầy tiếc ...
+url = https://nbtv.vn/news/42222/olympic-paris-2024-nguyen-thuy-linh-dung-buoc-day-tiec-nuoi
+
+[phunuvietnam.vn]
+match = -168.4%%
+title = Olympic Paris: Thua 2 séc với cùng điểm số 20-22, tay vợt ...
+url = https://phunuvietnam.vn/olympic-paris-thua-2-sec-voi-cung-diem-so-20-22-tay-vot-nguyen-thuy-linh-dung-buoc-2024073115001541.htm
 
