--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-01 11:48:45
+lastsearch = 2024-08-01 12:18:25
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOopJih7djk12xSn3SdGe-4yk21AcCs7Z14jLgGCKqjQG5-yewBGk
 
 [www.dienmayxanh.com]
 match = -73.9%%
