--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-01 09:30:03
+lastsearch = 2024-08-01 12:28:06
 
 [phana.com.vn]
 match = -90.9%%
@@ -54,7 +54,7 @@ url = https://hungnamphat.com.vn/giuong-gap-nhap-khau-nhat-ban-otb-mn/
 [www.lazada.vn]
 match = -263.6%%
 title = Giường 1 M 6 Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/giuong-1-m-6/?innerlink=hot_v1
+url = https://www.lazada.vn/tag/giuong-1-m-6/?innerlink=hot_v1&srsltid=AfmBOopuXAVA5zdf60ZnUdC-z6RGaSin34XiJ6UNOh-yuE3hY5UmSyJm
 
 [hoaphatsaigon.com]
 match = -272.7%%
