--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-01 08:05:13
+lastsearch = 2024-08-01 12:22:13
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -170.6%%
-title = Army Reserve Magazine - Volume 16 - Google Books Result
-url = https://books.google.com/books?id=m80R501TO0wC&pg=PP12&lpg=PP12&dq=man+in+hoa+dep+16&source=bl&ots=IqNtZSQZAO&sig=ACfU3U1EX0SW_ZyHxJ3cnmR_TxXsJ4ddag&hl=en&sa=X&ved=2ahUKEwi-k6enhdKHAxXSMVkFHSMaBuIQ6AF6BAgcEAM
+match = -158.8%%
+title = The Monthly Army List - Page 23 - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnjkd4gT&sig=ACfU3U1MtmrovAPMFtvtO3cMHsg8O2jhcA&hl=en&sa=X&ved=2ahUKEwi74tGlhtOHAxWQm4kEHStKNM8Q6AF6BAgYEAM
 
 [tax.vermont.gov]
 match = -29.4%%
