--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-01 11:47:21
+lastsearch = 2024-08-01 12:14:16
 
 [hanvico.net.vn]
-match = -42.1%%
-title = Ruột gối lông vũ cao cấp 30x50 - Hanvico
-url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
+match = -10.5%%
+title = Ruột gối lông vũ cao cấp - Hanvico
+url = https://hanvico.net.vn/collections/ruot-goi-long-vu-cao-cap
 
 [demvip.vn]
 match = 10.5%%
-title = Ruột gối lông vũ cao cấp 50*70
-url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-50-70
+title = Ruột gối lông vũ cao cấp 45*65
+url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-1
 
 [antbedding.com]
 match = 78.9%%
@@ -52,9 +52,9 @@ title = Ruột Gối Nằm Cao Cấp À Ơi Concept 50x70cm (01 cái)
 url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-01-cai-gon-bong-hat-long-vu
 
 [jysk.vn]
-match = -100.0%%
-title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
-url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
+match = 31.6%%
+title = Ruột gối lông vũ - JYSK.vn
+url = https://jysk.vn/ruot-goi-long-vu
 
 [shopee.vn]
 match = -142.1%%
@@ -78,8 +78,8 @@ url = https://greentex.com.vn/san-pham/ruot-goi-greentex-microfiber-long-vu-down
 
 [www.lazada.vn]
 match = -78.9%%
-title = LEBI Bộ Ruột Gối Lông Vũ, Một Cặp Gối Kê Cổ ...
-url = https://www.lazada.vn/products/lebi-bo-ruot-goi-long-vu-mot-cap-goi-ke-co-goi-ke-co-don-va-mot-nguoi-lon-ky-tuc-xa-doi-i2132402077.html
+title = Ruột Gối Nằm LÔNG VŨ SOFT GOLD Cao Cấp ... - Lazada
+url = https://www.lazada.vn/products/ruot-goi-nam-long-vu-soft-gold-cao-cap-ruot-goi-long-vu-nhan-tao-microfiber-goi-ke-co-dau-giuong-nam-ngu-long-vu-mem-soft-gold-cao-cap-chuan-khach-san-cho-nguoi-lon-hotel-pillow-i2103335907.html
 
 [dreamtex.vn]
 match = -5.3%%
@@ -117,7 +117,17 @@ title = Ruột gối lông vũ Lasante - nâng niu giấc ngủ của bạn mộ
 url = http://lasantedepari.com/vi/danh-muc/ruot-goi/ruot-goi-long-vu/
 
 [tiki.vn]
-match = -94.7%%
-title = Ruột gối lông vũ everon hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ruột gối lông vũ everon
+match = -136.8%%
+title = Mua Gối Lông Vũ Nhân Tạo Serena Cao Cấp Ruột ... - Tiki
+url = https://tiki.vn/goi-long-vu-nhan-tao-serena-cao-cap-ruot-goi-long-vu-mem-ke-co-goi-dau-nam-ngu-ngon-chuan-khach-san-nam-sao-p251370053.html
+
+[www.diepxuan.com]
+match = 15.8%%
+title = Ruột gối kê WDR lông vũ - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html
+
+[junstore.vn]
+match = -100.0%%
+title = Ruột gối nằm lông vũ nhân tạo Microfiber kích thước ...
+url = https://junstore.vn/products/ruot-goi-nam-long-vu-nhan-tao-microfiber-kich-thuoc-50x70cm-chuan-khach-san-5-thiet-ke-1-vien
 
