--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-01 06:40:04
+lastsearch = 2024-08-01 12:24:21
 
 [demxanh.com]
-match = -26.3%%
-title = Cung cấp mẫu tấm trang trí khách sạn TT04
-url = https://demxanh.com/tam-trang-tri-khach-san-tt04.html
+match = -84.2%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
+url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
 match = -73.7%%
