--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-01 13:50:28
+lastsearch = 2024-08-01 14:13:26
 
 [www.youtube.com]
 match = -147.4%%
@@ -350,4 +350,9 @@ url = https://dentrongcaylgl.com/nhung-dieu-thu-vi-ve-cay-moc-huong
 match = -100.0%%
 title = Set 3 Cây hoa mộc, mộc hương ta hoa trắng thơm lâu
 url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-thom-lau-i1734591241.html
+
+[caycanhnoithat.net]
+match = -142.1%%
+title = Cây hoa mộc mang đến hương thơm trong lành ngây ngất ...
+url = http://caycanhnoithat.net/cua-hang/san-pham/cay-hoa-moc-mang-den-huong-thom-trong-lanh-ngay-ngat-cho-khong-gian/
 
