--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-01 12:39:34
+lastsearch = 2024-08-01 17:48:49
 
 [everon.online]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -12.0%%
-title = Bộ ga chun chần Freesia bốn mùa - Everon
-url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
