--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-01 15:40:26
+lastsearch = 2024-08-01 17:39:27
 
 [www.instagram.com]
 match = -173.3%%
@@ -265,4 +265,9 @@ url = https://scholar.google.ch/citations?user=o9lF5bAAAAAJ&hl=vi
 match = -186.7%%
 title = #bangchan #han #felix #straykids #lovestay #loveskz ...
 url = https://www.tiktok.com/@mrsbahngchanshi/video/7143931181619252507
+
+[www.creativeboom.com]
+match = -240.0%%
+title = Hoi Chan draws on scientific illustrations to create 'muted ...
+url = https://www.creativeboom.com/inspiration/hoi-chan/
 
