--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-01 16:51:43
+lastsearch = 2024-08-01 17:46:02
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -17,14 +17,14 @@ title = Ghế xếp dây Đài Loan khung sắt Đại Thành - GX16
 url = https://noithatdaithanh.vn/ghe-xep-day-dai-loan-khung-sat-dai-thanh-gx16/
 
 [www.voatiengviet.com]
-match = -133.3%%
-title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường ...
-url = https://www.voatiengviet.com/a/7026996.html
+match = -119.0%%
+title = Trung Quốc kết thúc tập trận, Đài Loan lên án 'khiêu khích ...
+url = https://www.voatiengviet.com/a/trung-quoc-ket-thuc-tap-tran-dai-loan-khieu-khich-trang-tron/7626824.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
+match = -142.9%%
+title = 8 tiêm kích F-16 của Đài Loan bị hỏng do động đất | Báo Điện ...
+url = https://www.youtube.com/watch?v=mXEhvHrPf94
 
 [m.facebook.com]
 match = -95.2%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -128.6%%
-title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
-url = https://www.roc-taiwan.org/vn_vi/cat/47.html
+match = 23.8%%
+title = THỜI GIAN NHẬN TRẢ HỒ SƠ
+url = https://www.roc-taiwan.org/vnsgn_vi/post/74.html
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
-url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
+match = -9.5%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [cau-ca.com]
 match = -42.9%%
