--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-01 15:36:49
+lastsearch = 2024-08-01 17:46:23
 
 [shopee.vn]
-match = -12.0%%
-title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
+match = -32.0%%
+title = Mùng chụp tự bung khung gấp gọn thông minh cao cấp
+url = https://shopee.vn/Mùng-chụp-tự-bung-khung-gấp-gọn-thông-minh-cao-cấp-Màn-chụp-tự-bung-người-lớn-1m2-1m6-1m8-2m2-đỉnh-vuông-i.472489092.2973784523
 
 [munghoangphat.com]
 match = 48.0%%
