--- a/images/tam-trai-topper-everon/config.ini
+++ b/images/tam-trai-topper-everon/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon.html
 lastopen = 2024-06-07 01:44:00
 
 [search]
-lastsearch = 2024-08-01 16:59:34
+lastsearch = 2024-08-01 17:34:15
 
 [www.everonvn.vn]
 match = -27.3%%
@@ -29,12 +29,12 @@ url = https://everonhn.com.vn/tam-trai-da-nang-everon
 [everonvn.com.vn]
 match = 18.2%%
 title = Bảng giá bán Tấm topper Everon AVIV
-url = https://everonvn.com.vn/everon/2215/topper-everon-aviv
+url = https://everonvn.com.vn/everon/2215/topper-everon-aviv?srsltid=AfmBOooyEIl8xYeSS-NXOlPm0xWjhq_ngvbuuJkMuWmlZUW5ty-ZxmLW
 
 [everon.com]
-match = 47.1%%
-title = Tấm trải - Topper
-url = https://everon.com/danh-muc-san-pham/tam-trai-topper
+match = -113.6%%
+title = Bảng giá của 5 loại topper trải sàn đa năng, cao cấp nhất ...
+url = https://everon.com/tin-san-pham/topper-trai-san-n256.html
 
 [everonthaiha.com]
 match = 47.1%%
