--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-01 16:40:22
+lastsearch = 2024-08-01 17:47:46
 
 [demxanh.com]
-match = -45.5%%
-title = Thanh lý thảm trải giường lông cừu giá cực rẻ
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 4
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
+title = Bộ thảm ghế gỗ 1 dài 2 ngắn
+url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-5
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [demolympia.com]
 match = -40.9%%
