--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-01 14:15:32
+lastsearch = 2024-08-01 18:31:05
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,12 +14,12 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOoq5bEyLaXSNtLLSm6ciZYxOk0R4Sf0SiVVguKJsA6Zarbp4sM3n
 
 [chieutrelanlan.com]
-match = -66.7%%
-title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
+match = -20.8%%
+title = Chiếu trúc mắt nhỏ không viền màu trắng 140x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-140x190cm-15.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -27,9 +27,9 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 4.2%%
-title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+match = 25.0%%
+title = Chiếu Trúc Tre Việt Nam | Hanoi
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [shopee.vn]
 match = 50.0%%
@@ -59,7 +59,7 @@ url = https://chieutrucxinh.weebly.com/chia-se/previous/2
 [www.lazada.vn]
 match = -70.8%%
 title = Chiếu trúc/ chiếu tre 1m2*1m9 hàng Việt Nam cao cấp siêu ...
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-1m21m9-hang-viet-nam-cao-cap-sieu-re-chieu-khong-dung-vien-vai-ca-chieu-bang-hat-tre-i270848531.html
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-1m21m9-hang-viet-nam-cao-cap-sieu-re-chieu-khong-dung-vien-vai-ca-chieu-bang-hat-tre-i270848531.html?srsltid=AfmBOoqEemI7JEkFpbea2o9P78yCwi_yhYj4ib1HK8m6WNaJeuytyMuo
 
 [thptthuthiem.hcm.edu.vn]
 match = -83.3%%
