--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-01 17:46:23
+lastsearch = 2024-08-01 18:25:40
 
 [shopee.vn]
 match = -32.0%%
@@ -12,9 +12,9 @@ title = Mùng chụp tự bung khung gấp gọn thông minh cao cấp
 url = https://shopee.vn/Mùng-chụp-tự-bung-khung-gấp-gọn-thông-minh-cao-cấp-Màn-chụp-tự-bung-người-lớn-1m2-1m6-1m8-2m2-đỉnh-vuông-i.472489092.2973784523
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -36.0%%
+title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
+url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
 
 [www.mungbaobao.com]
 match = -28.0%%
